// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`countries is truthy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-align-space-between-start"
  >
    <div
      className="layout-row flex flex-sm-100"
    >
      <div
        className="layout-row flex-100 layout-align-start-center layout-wrap"
      >
        <ReactTable
          AggregatedComponent={[Function]}
          ExpanderComponent={[Function]}
          FilterComponent={[Function]}
          LoadingComponent={[Function]}
          NoDataComponent={[Function]}
          PadRowComponent={[Function]}
          PaginationComponent={[Function]}
          PivotValueComponent={[Function]}
          ResizerComponent={[Function]}
          TableComponent={[Function]}
          TbodyComponent={[Function]}
          TdComponent={[Function]}
          TfootComponent={[Function]}
          ThComponent={[Function]}
          TheadComponent={[Function]}
          TrComponent={[Function]}
          TrGroupComponent={[Function]}
          aggregatedKey="_aggregated"
          className="flex-95 height_100"
          collapseOnDataChange={true}
          collapseOnPageChange={true}
          collapseOnSortingChange={true}
          column={
            Object {
              "Aggregated": undefined,
              "Cell": undefined,
              "Expander": undefined,
              "Filter": undefined,
              "Footer": undefined,
              "Header": undefined,
              "Pivot": undefined,
              "PivotValue": undefined,
              "Placeholder": undefined,
              "aggregate": undefined,
              "className": "",
              "filterAll": false,
              "filterMethod": undefined,
              "filterable": undefined,
              "footerClassName": "",
              "footerStyle": Object {},
              "getFooterProps": [Function],
              "getHeaderProps": [Function],
              "getProps": [Function],
              "headerClassName": "",
              "headerStyle": Object {},
              "minResizeWidth": 11,
              "minWidth": 100,
              "resizable": undefined,
              "show": true,
              "sortMethod": undefined,
              "sortable": undefined,
              "style": Object {},
            }
          }
          columns={
            Array [
              Object {
                "Cell": [Function],
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "LOCODE",
                "accessor": [Function],
                "id": "locode",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "MOT",
                "accessor": [Function],
                "id": "type",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Header": "Country",
                "accessor": [Function],
                "id": "country",
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "Local Charges Expiring at",
                "accessor": [Function],
                "id": "earliest_expiration",
              },
            ]
          }
          data={
            Array [
              Object {
                "address": Object {
                  "city": "FOO_CITY",
                  "country": "Germany",
                  "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                  "id": 246,
                  "primary": true,
                  "street": "FOO_STREET",
                  "streetNumber": 579,
                  "street_number": 579,
                  "zipCode": "22456",
                  "zip_code": "22456",
                },
                "name": "FOO_HUB_NAME",
              },
            ]
          }
          defaultExpanded={Object {}}
          defaultFilterMethod={[Function]}
          defaultFiltered={Array []}
          defaultPage={0}
          defaultPageSize={15}
          defaultResized={Array []}
          defaultSortDesc={false}
          defaultSortMethod={[Function]}
          defaultSorted={
            Array [
              Object {
                "desc": false,
                "id": "name",
              },
            ]
          }
          expanderDefaults={
            Object {
              "filterable": false,
              "resizable": false,
              "sortable": false,
              "width": 35,
            }
          }
          filterable={true}
          freezeWhenExpanded={false}
          getLoadingProps={[Function]}
          getNoDataProps={[Function]}
          getPaginationProps={[Function]}
          getProps={[Function]}
          getResizerProps={[Function]}
          getTableProps={[Function]}
          getTbodyProps={[Function]}
          getTdProps={[Function]}
          getTfootProps={[Function]}
          getTfootTdProps={[Function]}
          getTfootTrProps={[Function]}
          getTheadFilterProps={[Function]}
          getTheadFilterThProps={[Function]}
          getTheadFilterTrProps={[Function]}
          getTheadGroupProps={[Function]}
          getTheadGroupThProps={[Function]}
          getTheadGroupTrProps={[Function]}
          getTheadProps={[Function]}
          getTheadThProps={[Function]}
          getTheadTrProps={[Function]}
          getTrGroupProps={[Function]}
          getTrProps={[Function]}
          groupedByPivotKey="_groupedByPivot"
          indexKey="_index"
          loading={false}
          loadingText="Loading..."
          manual={true}
          multiSort={true}
          nestingLevelKey="_nestingLevel"
          nextText="Next"
          noDataText="No rows found"
          ofText="of"
          onFetchData={[Function]}
          originalKey="_original"
          pageJumpText="jump to page"
          pageSize={15}
          pageSizeOptions={
            Array [
              5,
              10,
              20,
              25,
              50,
              100,
            ]
          }
          pageText="Page"
          pivotDefaults={Object {}}
          pivotIDKey="_pivotID"
          pivotValKey="_pivotVal"
          previousText="Previous"
          resizable={true}
          resolveData={[Function]}
          rowsSelectorText="rows per page"
          rowsText="rows"
          showPageJump={true}
          showPageSizeOptions={true}
          showPagination={true}
          showPaginationBottom={true}
          showPaginationTop={false}
          sortable={true}
          style={Object {}}
          subRowsKey="_subRows"
        />
      </div>
    </div>
    <div
      className="flex-20 hide-sm hide-xs layout-row layout-wrap layout-align-end-end"
    >
      <div
        className="position_fixed_right flex"
      >
        <div
          className="flex layout-row margin_bottom"
        >
          <div>
            a
          </div>
          <div>
            b
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`hubs is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-align-space-between-start"
  >
    <div
      className="layout-row flex flex-sm-100"
    >
      <div
        className="layout-row flex-100 layout-align-start-center layout-wrap"
      >
        <ReactTable
          AggregatedComponent={[Function]}
          ExpanderComponent={[Function]}
          FilterComponent={[Function]}
          LoadingComponent={[Function]}
          NoDataComponent={[Function]}
          PadRowComponent={[Function]}
          PaginationComponent={[Function]}
          PivotValueComponent={[Function]}
          ResizerComponent={[Function]}
          TableComponent={[Function]}
          TbodyComponent={[Function]}
          TdComponent={[Function]}
          TfootComponent={[Function]}
          ThComponent={[Function]}
          TheadComponent={[Function]}
          TrComponent={[Function]}
          TrGroupComponent={[Function]}
          aggregatedKey="_aggregated"
          className="flex-95 height_100"
          collapseOnDataChange={true}
          collapseOnPageChange={true}
          collapseOnSortingChange={true}
          column={
            Object {
              "Aggregated": undefined,
              "Cell": undefined,
              "Expander": undefined,
              "Filter": undefined,
              "Footer": undefined,
              "Header": undefined,
              "Pivot": undefined,
              "PivotValue": undefined,
              "Placeholder": undefined,
              "aggregate": undefined,
              "className": "",
              "filterAll": false,
              "filterMethod": undefined,
              "filterable": undefined,
              "footerClassName": "",
              "footerStyle": Object {},
              "getFooterProps": [Function],
              "getHeaderProps": [Function],
              "getProps": [Function],
              "headerClassName": "",
              "headerStyle": Object {},
              "minResizeWidth": 11,
              "minWidth": 100,
              "resizable": undefined,
              "show": true,
              "sortMethod": undefined,
              "sortable": undefined,
              "style": Object {},
            }
          }
          columns={
            Array [
              Object {
                "Cell": [Function],
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "LOCODE",
                "accessor": [Function],
                "id": "locode",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "MOT",
                "accessor": [Function],
                "id": "type",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Header": "Country",
                "accessor": [Function],
                "id": "country",
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "Local Charges Expiring at",
                "accessor": [Function],
                "id": "earliest_expiration",
              },
            ]
          }
          data={null}
          defaultExpanded={Object {}}
          defaultFilterMethod={[Function]}
          defaultFiltered={Array []}
          defaultPage={0}
          defaultPageSize={15}
          defaultResized={Array []}
          defaultSortDesc={false}
          defaultSortMethod={[Function]}
          defaultSorted={
            Array [
              Object {
                "desc": false,
                "id": "name",
              },
            ]
          }
          expanderDefaults={
            Object {
              "filterable": false,
              "resizable": false,
              "sortable": false,
              "width": 35,
            }
          }
          filterable={true}
          freezeWhenExpanded={false}
          getLoadingProps={[Function]}
          getNoDataProps={[Function]}
          getPaginationProps={[Function]}
          getProps={[Function]}
          getResizerProps={[Function]}
          getTableProps={[Function]}
          getTbodyProps={[Function]}
          getTdProps={[Function]}
          getTfootProps={[Function]}
          getTfootTdProps={[Function]}
          getTfootTrProps={[Function]}
          getTheadFilterProps={[Function]}
          getTheadFilterThProps={[Function]}
          getTheadFilterTrProps={[Function]}
          getTheadGroupProps={[Function]}
          getTheadGroupThProps={[Function]}
          getTheadGroupTrProps={[Function]}
          getTheadProps={[Function]}
          getTheadThProps={[Function]}
          getTheadTrProps={[Function]}
          getTrGroupProps={[Function]}
          getTrProps={[Function]}
          groupedByPivotKey="_groupedByPivot"
          indexKey="_index"
          loading={false}
          loadingText="Loading..."
          manual={true}
          multiSort={true}
          nestingLevelKey="_nestingLevel"
          nextText="Next"
          noDataText="No rows found"
          ofText="of"
          onFetchData={[Function]}
          originalKey="_original"
          pageJumpText="jump to page"
          pageSize={15}
          pageSizeOptions={
            Array [
              5,
              10,
              20,
              25,
              50,
              100,
            ]
          }
          pageText="Page"
          pivotDefaults={Object {}}
          pivotIDKey="_pivotID"
          pivotValKey="_pivotVal"
          previousText="Previous"
          resizable={true}
          resolveData={[Function]}
          rowsSelectorText="rows per page"
          rowsText="rows"
          showPageJump={true}
          showPageSizeOptions={true}
          showPagination={true}
          showPaginationBottom={true}
          showPaginationTop={false}
          sortable={true}
          style={Object {}}
          subRowsKey="_subRows"
        />
      </div>
    </div>
    <div
      className="flex-20 hide-sm hide-xs layout-row layout-wrap layout-align-end-end"
    >
      <div
        className="position_fixed_right flex"
      >
        <div
          className="flex layout-row margin_bottom"
        >
          <div>
            a
          </div>
          <div>
            b
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-align-space-between-start"
  >
    <div
      className="layout-row flex flex-sm-100"
    >
      <div
        className="layout-row flex-100 layout-align-start-center layout-wrap"
      >
        <ReactTable
          AggregatedComponent={[Function]}
          ExpanderComponent={[Function]}
          FilterComponent={[Function]}
          LoadingComponent={[Function]}
          NoDataComponent={[Function]}
          PadRowComponent={[Function]}
          PaginationComponent={[Function]}
          PivotValueComponent={[Function]}
          ResizerComponent={[Function]}
          TableComponent={[Function]}
          TbodyComponent={[Function]}
          TdComponent={[Function]}
          TfootComponent={[Function]}
          ThComponent={[Function]}
          TheadComponent={[Function]}
          TrComponent={[Function]}
          TrGroupComponent={[Function]}
          aggregatedKey="_aggregated"
          className="flex-95 height_100"
          collapseOnDataChange={true}
          collapseOnPageChange={true}
          collapseOnSortingChange={true}
          column={
            Object {
              "Aggregated": undefined,
              "Cell": undefined,
              "Expander": undefined,
              "Filter": undefined,
              "Footer": undefined,
              "Header": undefined,
              "Pivot": undefined,
              "PivotValue": undefined,
              "Placeholder": undefined,
              "aggregate": undefined,
              "className": "",
              "filterAll": false,
              "filterMethod": undefined,
              "filterable": undefined,
              "footerClassName": "",
              "footerStyle": Object {},
              "getFooterProps": [Function],
              "getHeaderProps": [Function],
              "getProps": [Function],
              "headerClassName": "",
              "headerStyle": Object {},
              "minResizeWidth": 11,
              "minWidth": 100,
              "resizable": undefined,
              "show": true,
              "sortMethod": undefined,
              "sortable": undefined,
              "style": Object {},
            }
          }
          columns={
            Array [
              Object {
                "Cell": [Function],
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "LOCODE",
                "accessor": [Function],
                "id": "locode",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "MOT",
                "accessor": [Function],
                "id": "type",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Header": "Country",
                "accessor": [Function],
                "id": "country",
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "Local Charges Expiring at",
                "accessor": [Function],
                "id": "earliest_expiration",
              },
            ]
          }
          data={
            Array [
              Object {
                "address": Object {
                  "city": "FOO_CITY",
                  "country": "Germany",
                  "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                  "id": 246,
                  "primary": true,
                  "street": "FOO_STREET",
                  "streetNumber": 579,
                  "street_number": 579,
                  "zipCode": "22456",
                  "zip_code": "22456",
                },
                "name": "FOO_HUB_NAME",
              },
            ]
          }
          defaultExpanded={Object {}}
          defaultFilterMethod={[Function]}
          defaultFiltered={Array []}
          defaultPage={0}
          defaultPageSize={15}
          defaultResized={Array []}
          defaultSortDesc={false}
          defaultSortMethod={[Function]}
          defaultSorted={
            Array [
              Object {
                "desc": false,
                "id": "name",
              },
            ]
          }
          expanderDefaults={
            Object {
              "filterable": false,
              "resizable": false,
              "sortable": false,
              "width": 35,
            }
          }
          filterable={true}
          freezeWhenExpanded={false}
          getLoadingProps={[Function]}
          getNoDataProps={[Function]}
          getPaginationProps={[Function]}
          getProps={[Function]}
          getResizerProps={[Function]}
          getTableProps={[Function]}
          getTbodyProps={[Function]}
          getTdProps={[Function]}
          getTfootProps={[Function]}
          getTfootTdProps={[Function]}
          getTfootTrProps={[Function]}
          getTheadFilterProps={[Function]}
          getTheadFilterThProps={[Function]}
          getTheadFilterTrProps={[Function]}
          getTheadGroupProps={[Function]}
          getTheadGroupThProps={[Function]}
          getTheadGroupTrProps={[Function]}
          getTheadProps={[Function]}
          getTheadThProps={[Function]}
          getTheadTrProps={[Function]}
          getTrGroupProps={[Function]}
          getTrProps={[Function]}
          groupedByPivotKey="_groupedByPivot"
          indexKey="_index"
          loading={false}
          loadingText="Loading..."
          manual={true}
          multiSort={true}
          nestingLevelKey="_nestingLevel"
          nextText="Next"
          noDataText="No rows found"
          ofText="of"
          onFetchData={[Function]}
          originalKey="_original"
          pageJumpText="jump to page"
          pageSize={15}
          pageSizeOptions={
            Array [
              5,
              10,
              20,
              25,
              50,
              100,
            ]
          }
          pageText="Page"
          pivotDefaults={Object {}}
          pivotIDKey="_pivotID"
          pivotValKey="_pivotVal"
          previousText="Previous"
          resizable={true}
          resolveData={[Function]}
          rowsSelectorText="rows per page"
          rowsText="rows"
          showPageJump={true}
          showPageSizeOptions={true}
          showPagination={true}
          showPaginationBottom={true}
          showPaginationTop={false}
          sortable={true}
          style={Object {}}
          subRowsKey="_subRows"
        />
      </div>
    </div>
    <div
      className="flex-20 hide-sm hide-xs layout-row layout-wrap layout-align-end-end"
    >
      <div
        className="position_fixed_right flex"
      >
        <div
          className="flex layout-row margin_bottom"
        >
          <div>
            a
          </div>
          <div>
            b
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`state.page > 0 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-align-space-between-start"
  >
    <div
      className="layout-row flex flex-sm-100"
    >
      <div
        className="layout-row flex-100 layout-align-start-center layout-wrap"
      >
        <ReactTable
          AggregatedComponent={[Function]}
          ExpanderComponent={[Function]}
          FilterComponent={[Function]}
          LoadingComponent={[Function]}
          NoDataComponent={[Function]}
          PadRowComponent={[Function]}
          PaginationComponent={[Function]}
          PivotValueComponent={[Function]}
          ResizerComponent={[Function]}
          TableComponent={[Function]}
          TbodyComponent={[Function]}
          TdComponent={[Function]}
          TfootComponent={[Function]}
          ThComponent={[Function]}
          TheadComponent={[Function]}
          TrComponent={[Function]}
          TrGroupComponent={[Function]}
          aggregatedKey="_aggregated"
          className="flex-95 height_100"
          collapseOnDataChange={true}
          collapseOnPageChange={true}
          collapseOnSortingChange={true}
          column={
            Object {
              "Aggregated": undefined,
              "Cell": undefined,
              "Expander": undefined,
              "Filter": undefined,
              "Footer": undefined,
              "Header": undefined,
              "Pivot": undefined,
              "PivotValue": undefined,
              "Placeholder": undefined,
              "aggregate": undefined,
              "className": "",
              "filterAll": false,
              "filterMethod": undefined,
              "filterable": undefined,
              "footerClassName": "",
              "footerStyle": Object {},
              "getFooterProps": [Function],
              "getHeaderProps": [Function],
              "getProps": [Function],
              "headerClassName": "",
              "headerStyle": Object {},
              "minResizeWidth": 11,
              "minWidth": 100,
              "resizable": undefined,
              "show": true,
              "sortMethod": undefined,
              "sortable": undefined,
              "style": Object {},
            }
          }
          columns={
            Array [
              Object {
                "Cell": [Function],
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "LOCODE",
                "accessor": [Function],
                "id": "locode",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "MOT",
                "accessor": [Function],
                "id": "type",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Header": "Country",
                "accessor": [Function],
                "id": "country",
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "Local Charges Expiring at",
                "accessor": [Function],
                "id": "earliest_expiration",
              },
            ]
          }
          data={
            Array [
              Object {
                "address": Object {
                  "city": "FOO_CITY",
                  "country": "Germany",
                  "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                  "id": 246,
                  "primary": true,
                  "street": "FOO_STREET",
                  "streetNumber": 579,
                  "street_number": 579,
                  "zipCode": "22456",
                  "zip_code": "22456",
                },
                "name": "FOO_HUB_NAME",
              },
            ]
          }
          defaultExpanded={Object {}}
          defaultFilterMethod={[Function]}
          defaultFiltered={Array []}
          defaultPage={0}
          defaultPageSize={15}
          defaultResized={Array []}
          defaultSortDesc={false}
          defaultSortMethod={[Function]}
          defaultSorted={
            Array [
              Object {
                "desc": false,
                "id": "name",
              },
            ]
          }
          expanderDefaults={
            Object {
              "filterable": false,
              "resizable": false,
              "sortable": false,
              "width": 35,
            }
          }
          filterable={true}
          freezeWhenExpanded={false}
          getLoadingProps={[Function]}
          getNoDataProps={[Function]}
          getPaginationProps={[Function]}
          getProps={[Function]}
          getResizerProps={[Function]}
          getTableProps={[Function]}
          getTbodyProps={[Function]}
          getTdProps={[Function]}
          getTfootProps={[Function]}
          getTfootTdProps={[Function]}
          getTfootTrProps={[Function]}
          getTheadFilterProps={[Function]}
          getTheadFilterThProps={[Function]}
          getTheadFilterTrProps={[Function]}
          getTheadGroupProps={[Function]}
          getTheadGroupThProps={[Function]}
          getTheadGroupTrProps={[Function]}
          getTheadProps={[Function]}
          getTheadThProps={[Function]}
          getTheadTrProps={[Function]}
          getTrGroupProps={[Function]}
          getTrProps={[Function]}
          groupedByPivotKey="_groupedByPivot"
          indexKey="_index"
          loading={false}
          loadingText="Loading..."
          manual={true}
          multiSort={true}
          nestingLevelKey="_nestingLevel"
          nextText="Next"
          noDataText="No rows found"
          ofText="of"
          onFetchData={[Function]}
          originalKey="_original"
          pageJumpText="jump to page"
          pageSize={15}
          pageSizeOptions={
            Array [
              5,
              10,
              20,
              25,
              50,
              100,
            ]
          }
          pageText="Page"
          pivotDefaults={Object {}}
          pivotIDKey="_pivotID"
          pivotValKey="_pivotVal"
          previousText="Previous"
          resizable={true}
          resolveData={[Function]}
          rowsSelectorText="rows per page"
          rowsText="rows"
          showPageJump={true}
          showPageSizeOptions={true}
          showPagination={true}
          showPaginationBottom={true}
          showPaginationTop={false}
          sortable={true}
          style={Object {}}
          subRowsKey="_subRows"
        />
      </div>
    </div>
    <div
      className="flex-20 hide-sm hide-xs layout-row layout-wrap layout-align-end-end"
    >
      <div
        className="position_fixed_right flex"
      >
        <div
          className="flex layout-row margin_bottom"
        >
          <div>
            a
          </div>
          <div>
            b
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`state.searchFilters.hubType is truthy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-align-space-between-start"
  >
    <div
      className="layout-row flex flex-sm-100"
    >
      <div
        className="layout-row flex-100 layout-align-start-center layout-wrap"
      >
        <ReactTable
          AggregatedComponent={[Function]}
          ExpanderComponent={[Function]}
          FilterComponent={[Function]}
          LoadingComponent={[Function]}
          NoDataComponent={[Function]}
          PadRowComponent={[Function]}
          PaginationComponent={[Function]}
          PivotValueComponent={[Function]}
          ResizerComponent={[Function]}
          TableComponent={[Function]}
          TbodyComponent={[Function]}
          TdComponent={[Function]}
          TfootComponent={[Function]}
          ThComponent={[Function]}
          TheadComponent={[Function]}
          TrComponent={[Function]}
          TrGroupComponent={[Function]}
          aggregatedKey="_aggregated"
          className="flex-95 height_100"
          collapseOnDataChange={true}
          collapseOnPageChange={true}
          collapseOnSortingChange={true}
          column={
            Object {
              "Aggregated": undefined,
              "Cell": undefined,
              "Expander": undefined,
              "Filter": undefined,
              "Footer": undefined,
              "Header": undefined,
              "Pivot": undefined,
              "PivotValue": undefined,
              "Placeholder": undefined,
              "aggregate": undefined,
              "className": "",
              "filterAll": false,
              "filterMethod": undefined,
              "filterable": undefined,
              "footerClassName": "",
              "footerStyle": Object {},
              "getFooterProps": [Function],
              "getHeaderProps": [Function],
              "getProps": [Function],
              "headerClassName": "",
              "headerStyle": Object {},
              "minResizeWidth": 11,
              "minWidth": 100,
              "resizable": undefined,
              "show": true,
              "sortMethod": undefined,
              "sortable": undefined,
              "style": Object {},
            }
          }
          columns={
            Array [
              Object {
                "Cell": [Function],
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "LOCODE",
                "accessor": [Function],
                "id": "locode",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "MOT",
                "accessor": [Function],
                "id": "type",
                "maxWidth": 100,
              },
              Object {
                "Cell": [Function],
                "Header": "Country",
                "accessor": [Function],
                "id": "country",
              },
              Object {
                "Cell": [Function],
                "Filter": [Function],
                "Header": "Local Charges Expiring at",
                "accessor": [Function],
                "id": "earliest_expiration",
              },
            ]
          }
          data={
            Array [
              Object {
                "address": Object {
                  "city": "FOO_CITY",
                  "country": "Germany",
                  "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                  "id": 246,
                  "primary": true,
                  "street": "FOO_STREET",
                  "streetNumber": 579,
                  "street_number": 579,
                  "zipCode": "22456",
                  "zip_code": "22456",
                },
                "name": "FOO_HUB_NAME",
              },
            ]
          }
          defaultExpanded={Object {}}
          defaultFilterMethod={[Function]}
          defaultFiltered={Array []}
          defaultPage={0}
          defaultPageSize={15}
          defaultResized={Array []}
          defaultSortDesc={false}
          defaultSortMethod={[Function]}
          defaultSorted={
            Array [
              Object {
                "desc": false,
                "id": "name",
              },
            ]
          }
          expanderDefaults={
            Object {
              "filterable": false,
              "resizable": false,
              "sortable": false,
              "width": 35,
            }
          }
          filterable={true}
          freezeWhenExpanded={false}
          getLoadingProps={[Function]}
          getNoDataProps={[Function]}
          getPaginationProps={[Function]}
          getProps={[Function]}
          getResizerProps={[Function]}
          getTableProps={[Function]}
          getTbodyProps={[Function]}
          getTdProps={[Function]}
          getTfootProps={[Function]}
          getTfootTdProps={[Function]}
          getTfootTrProps={[Function]}
          getTheadFilterProps={[Function]}
          getTheadFilterThProps={[Function]}
          getTheadFilterTrProps={[Function]}
          getTheadGroupProps={[Function]}
          getTheadGroupThProps={[Function]}
          getTheadGroupTrProps={[Function]}
          getTheadProps={[Function]}
          getTheadThProps={[Function]}
          getTheadTrProps={[Function]}
          getTrGroupProps={[Function]}
          getTrProps={[Function]}
          groupedByPivotKey="_groupedByPivot"
          indexKey="_index"
          loading={false}
          loadingText="Loading..."
          manual={true}
          multiSort={true}
          nestingLevelKey="_nestingLevel"
          nextText="Next"
          noDataText="No rows found"
          ofText="of"
          onFetchData={[Function]}
          originalKey="_original"
          pageJumpText="jump to page"
          pageSize={15}
          pageSizeOptions={
            Array [
              5,
              10,
              20,
              25,
              50,
              100,
            ]
          }
          pageText="Page"
          pivotDefaults={Object {}}
          pivotIDKey="_pivotID"
          pivotValKey="_pivotVal"
          previousText="Previous"
          resizable={true}
          resolveData={[Function]}
          rowsSelectorText="rows per page"
          rowsText="rows"
          showPageJump={true}
          showPageSizeOptions={true}
          showPagination={true}
          showPaginationBottom={true}
          showPaginationTop={false}
          sortable={true}
          style={Object {}}
          subRowsKey="_subRows"
        />
      </div>
    </div>
    <div
      className="flex-20 hide-sm hide-xs layout-row layout-wrap layout-align-end-end"
    >
      <div
        className="position_fixed_right flex"
      >
        <div
          className="flex layout-row margin_bottom"
        >
          <div>
            a
          </div>
          <div>
            b
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
